# dnsupdate

./: .gitignore  .readthedocs.yml  .travis.yml  README.md  README.rst  default.nix  dnsupdate.py  dnsupdate.service  dnsupdate.timer  flake.nix  pyproject.toml  readthedocs.yml  requirements.txt  requirements_optional.txt  setup.cfg  setup.py
.github/workflows/: build.yaml
docs/: Makefile  address_providers.rst  conf.py  configuration_file.rst  configuring.rst  dns_services.rst  environment.yml  extending.rst  index.rst  make.bat  using.rst
examples/: provider_override.conf  simple.conf  simple_shorthand.conf
tests/: dnsupdate_test.py  include.txt  include.yml
