[metadata]
name = dnsupdate
version = attr: dnsupdate.__version__
author = Ben Wolsieffer
author_email = benwolsieffer@gmail.com
description = A modern and flexible dynamic DNS client
long_description = file: README.rst
license = GPLv3
keywords = dns
url = https://github.com/lopsided98/dnsupdate
classifiers =
    Programming Language :: Python :: 3.5
    Development Status :: 4 - Beta
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Topic :: System :: Networking

[options]
py_modules = dnsupdate
python_requires = >=3.5
install_requires =
    PyYAML
    requests

[options.extras_require]
Router-Address-Scraping = beautifulsoup4
Local-Address-Provider = netifaces
Build-Docs = sphinx-argparse

[options.entry_points]
console_scripts =
    dnsupdate = dnsupdate:main

[flake8]
ignore = E203
max-line-length = 100
